WIP for #693